5 endpoints set up for each 5 tables- get all, get one, post one, delete all, delete one.  update one is todo
